z-index fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -658,7 +658,7 @@ a {
                     padding: 0.25em 0;
                     position: absolute;
                     width: 100%;
-                    z-index: 1;
+                    //z-index: 1;
                 }
 
                 .preview-description, .preview-tags {
